<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

	<string name="app_name">BlueVvnx</string>
	<string name="lblsrvc">lblsrvc</string>
	
    <string name="lbl_1">No conn so far...</string>
    <string name="lbl_2"></string>
    <string name="lbl_3">No notif so far...</string>
    
    <string name="txt_btn_1">Start()</string>
    <string name="txt_btn_2">Stop()</string>


</resources>
