<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ap="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

	<Button
	android:id="@+id/button_1"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_alignParentLeft="true"
	android:text="@string/txt_btn_1"
	android:onClick="ActionPressBouton_1" />
	
	<Button
	android:id="@+id/button_2"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_alignParentRight="true"
	android:text="@string/txt_btn_2"
	android:onClick="ActionPressBouton_2" />
	
	<TextView 
	android:id="@+id/text1"	
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:textSize="15sp"
    android:text="@string/lbl_1" 
    android:textColor="#000000"/>    
    
    <TextView 
    android:id="@+id/text2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/text3"
    android:layout_centerHorizontal="true"
    android:textSize="15sp"
    android:text="@string/lbl_2" 
    android:textColor="#0008fc"/>   
    
    <TextView 
    android:id="@+id/text3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"    
    android:layout_below="@+id/text1"
    android:textSize="15sp"
    android:text="@string/lbl_3" 
    android:textColor="#000000" /> 
 
	<com.androidplot.xy.XYPlot
	style="@style/APDefacto.Light"
	android:id="@+id/plot"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_below="@id/text2"
	ap:title="A Simple XY Plot"
	ap:rangeTitle="range"
	ap:domainTitle="domain"
	ap:lineLabels="left|bottom"
	ap:lineLabelRotationBottom="-45"/>

	
</RelativeLayout>  
